2008-05-20 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl:
      Fixed order of Min/MaxScaleDenominator.

2008-05-19 mentaer <sstein@geo.unizh.ch>
      Did some major changes for Intersect Polygon Layers PlugIn, to avoid
      malformed output polygons. The new version utilizes the Polygonizer
      and attributes are transferred automatically (i.e. no option anymore)
      changed
      org.openjump.core.geomutils.algorithm.IntersectGeometries
      org.openjump.core.ui.plugin.tools.IntersectPolygonLayersPlugIn
      added
      org.openjump.core.geomutils.algorithm.GeometryConverter
      
2008-05-15 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java:
      Removed the long/int hack, since it was caused by the deeJUMP shape
      file reader and is fixed now.

2008-05-15 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
      src/org/openjump/util/SLDImporter.java:
      Fixed SLD import for long/int values. There are shape files
      that result in Integer values, and there are shape files that
      result in Long values. But the java type of the attribute type
      is always Integer!

2008-05-15 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java:
      Refactored the plugin so the main logic can be used by
      other SLD providers such as external tools.

2008-05-13 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
      src/org/openjump/util/SLDImporter.java:
      Fixed problems choosing the imported color theming style.

2008-05-13 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
      src/org/openjump/util/SLDImporter.java:
      Improved/re-added SLD import of color theming styles.

2008-05-11 mentaer <sstein@geo.unizh.ch>